--- a/app/views/backend/outgoing_deliveries/show.html.haml
+++ b/app/views/backend/outgoing_deliveries/show.html.haml
@@ -6,7 +6,7 @@
   -l.attribute :number
   -l.attribute :reference_number
   -l.attribute :mode
-  -l.attribute :weight
+  -l.attribute :mass
   -l.attribute :sale, url: true
   -l.attribute :address
   -l.attribute :transporter, url: true
