--- a/app/views/backend/transports/show.html.haml
+++ b/app/views/backend/transports/show.html.haml
@@ -10,7 +10,7 @@
   -l.attribute :transport_on
   -l.attribute :pretax_amount
   -l.attribute :amount
-  -l.attribute :weight
+  -l.attribute :mass
   -l.attribute :responsible, :url=>true
   -l.attribute :description
 
