--- a/app/views/backend/cultivable_zones/index.html.haml
+++ b/app/views/backend/cultivable_zones/index.html.haml
@@ -2,6 +2,9 @@
   - t.new
 
 = beehive do |b|
+  - b.hbox do
+    - b.cell :cropping_plan_on_cultivable_land_parcels, :params => {campaign: Campaign.currents.first}
+    - b.cell :cropping_plan_on_cultivable_land_parcels, :params => {campaign: Campaign.currents.last}
   - b.tabbox do
     - b.cell :map do
       %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => CultivableZone.shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
@@ -10,4 +13,3 @@
             %path{:d => cultivable_zone.shape_as_svg, :title => cultivable_zone.name}
     - b.cell :list do
       = list
-    - b.cell :cropping_plan_on_cultivable_land_parcels
