--- a/app/views/backend/cells/currents_stocks_by_product_nature_cells/show.html.haml
+++ b/app/views/backend/cells/currents_stocks_by_product_nature_cells/show.html.haml
@@ -8,10 +8,10 @@
 
     if product_natures.count > 0
       product_natures_serie = product_natures.collect do |product_nature|
-          { name: product_nature.name, y: product_nature.products.map(&:net_weight).compact.sum.to_s.to_f, id: product_nature.id, url: backend_product_nature_path(product_nature), color: cycle(*Backend::ChartsHelper::COLORS) }
+          { name: product_nature.name, y: product_nature.products.map(&:net_mass).compact.sum.to_s.to_f, id: product_nature.id, url: backend_product_nature_path(product_nature), color: cycle(*Backend::ChartsHelper::COLORS) }
       end
       product_nature_variants_serie = ProductNatureVariant.of_natures(product_natures).order("nature_id, id").collect do |product_nature_variant|
-          { name: product_nature_variant.name, y: product_nature_variant.products.map(&:net_weight).compact.sum.to_s.to_f, url: backend_product_nature_variant_path(product_nature_variant), color: ligthen(product_natures_serie.detect{|a| a[:id] == product_nature_variant.nature_id}[:color], 0.3) }
+          { name: product_nature_variant.name, y: product_nature_variant.products.map(&:net_mass).compact.sum.to_s.to_f, url: backend_product_nature_variant_path(product_nature_variant), color: ligthen(product_natures_serie.detect{|a| a[:id] == product_nature_variant.nature_id}[:color], 0.3) }
       end
     end
 
