--- a/app/views/backend/cells/meteo_cells/show.html.haml
+++ b/app/views/backend/cells/meteo_cells/show.html.haml
@@ -5,7 +5,8 @@
     series << {name: :minimal_temperature.tl, data: @forecast[:list].collect{|d| d[:temperatures][:min].to_f(:celsius) }, tooltip: {value_suffix: '°C' } }
     series << {name: :maximal_temperature.tl, data: @forecast[:list].collect{|d| d[:temperatures][:max].to_f(:celsius) }, tooltip: {value_suffix: '°C' } }
     series << {name: :precipitation.tl, type: 'column', data: @forecast[:list].collect{|d| d[:rain].to_f(:millimeter) }, tooltip: {value_suffix: ' mm' }, y_axis: 1 }
+    series << {name: :wind_speed.tl, type: 'column', data: @forecast[:list].collect{|d| d[:wind_speed].to_f(:meter_per_second) }, tooltip: {value_suffix: ' m/s' }, y_axis: 2 }
 
-  = line_chart(series, x_axis: {categories: categories}, y_axis: [{title: {text: Nomen::Indicators[:temperature].human_name}, labels: { format: '{value} °C' }}, {title: { text: :precipitation.tl }, labels: { format: '{value} mm' }, opposite: true}], legend: {})
+  = line_chart(series, x_axis: {categories: categories}, y_axis: [{title: {text: Nomen::Indicators[:temperature].human_name}, labels: { format: '{value} °C' }}, {title: { text: :precipitation.tl }, labels: { format: '{value} mm' }, opposite: true}, {title: { text: :wind_speed.tl }, labels: { format: '{value} m/s' }, opposite: true}], legend: {})
 - else
   %strong= :no_data.tl
