--- a/app/views/backend/interventions/_form.html.haml
+++ b/app/views/backend/interventions/_form.html.haml
@@ -17,7 +17,8 @@
       = v.input :reference_name, as: :hidden
       - if reference.new?
         = v.input("actor", :wrapper => :append, :value => 0, wrapper_html: {class: "inline special"}, label: reference.human_name) do
-          = v.input_field :population
+          - if reference.parted?
+            = v.input_field :population
           - if reference.known_variant?
             %span.add-on= reference.variant_indication
           - else
