--- a/app/views/backend/dashboards/stocks.html.haml
+++ b/app/views/backend/dashboards/stocks.html.haml
@@ -3,9 +3,9 @@
     - cell :last_outgoing_deliveries
     - cell :last_incoming_deliveries
   - hbox do
-    - cell :currents_stocks_by_product_nature, :params => {variety: 'mineral_matter', mass_unit: 'ton'}
+    - cell :currents_stocks_by_product_nature, :params => {variety: 'chemical_fertiliser', mass_unit: 'ton'}
     - cell :currents_stocks_by_product_nature, :params => {variety: 'manure', mass_unit: 'ton'}
-    - cell :currents_stocks_by_product_nature, :params => {variety: 'grain', mass_unit: 'quintal'}
+    -# cell :currents_stocks_by_product_nature, :params => {variety: 'grain', mass_unit: 'quintal'}
   - hbox do
     - cell :currents_stocks_by_product_nature, :params => {variety: 'animal_medicine'}
     - cell :currents_stocks_by_product_nature, :params => {variety: 'plant_medicine'}
