--- a/app/views/backend/production_support_markers/create.html.haml
+++ b/app/views/backend/production_support_markers/create.html.haml
@@ -1,8 +1,1 @@
--# Generated automatically. Remove this line to keep your changes.
-= backend_form_for(resource, (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
-  - if params[:redirect]
-    = hidden_field_tag(:redirect, params[:redirect])
-  .form-fields>= render('form', f: f)
-  = form_actions do
-    = submit_tag(tl(:create), 'data-disable-with' => tl(:please_wait))
-    = link_to(tl(:cancel), backend_production_support_markers_url, (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
+new.html.haml
