--- a/app/views/backend/bank_statements/show.html.haml
+++ b/app/views/backend/bank_statements/show.html.haml
@@ -4,7 +4,7 @@
 
 =attributes_list(@bank_statement) do |l|
   -l.attribute(:number)
-  -l.attribute(:cash, :url=>true)
+  -l.attribute(:cash, url: true)
   -l.attribute(:credit)
   -l.attribute(:debit)
   -l.attribute(:started_on)
