--- a/app/views/backend/sale_items/_subscription_fields.html.haml
+++ b/app/views/backend/sale_items/_subscription_fields.html.haml
@@ -1,16 +1,16 @@
 -# Generated automatically. Don't edit this file.
--subscription ||= f.object
+- subscription ||= f.object
 .nested-fields
-  =link_to_remove_association('labels.remove_subscription'.t, f, 'data-no-turbolink' => true, :class => 'nested-remove remove-subscription')
+  = link_to_remove_association('labels.remove_subscription'.t, f, 'data-no-turbolink' => true, :class => 'nested-remove remove-subscription')
   #address-field.control-group.selector.optional
     %label.control-label.optional{:for => 'subscription-address-input'}
-      =Subscription.human_attribute_name('address')
+      = Subscription.human_attribute_name('address')
     .controls
       %span.input
-        =selector(:subscription, :address, {:controller=>"entity_addresses", :action=>:unroll}, {:object => subscription}, :id => 'subscription-address-input', :class => 'selector optional') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :entity_addresses, :action => :new}, 'data-new-item' => 'subscription-address-input', :class => 'btn btn-new')
-      -for error in subscription.errors['address']
-        %span.help-inline=error
-  =f.input(:started_on, :as => :date_field, :wrapper_html => {:id => 'started-on-field'})
-  =f.input(:stopped_on, :as => :date_field, :wrapper_html => {:id => 'stopped-on-field'})
-  =f.input(:first_number, :wrapper_html => {:id => 'first-number-field'})
-  =f.input(:last_number, :wrapper_html => {:id => 'last-number-field'})
+        = selector(:subscription, :address, {:controller=>"entity_addresses", :action=>:unroll}, {:object => subscription}, :id => 'subscription-address-input', :class => 'selector optional') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :entity_addresses, :action => :new}, 'data-new-item' => 'subscription-address-input', :class => 'btn btn-new')
+      - for error in subscription.errors['address']
+        %span.help-inline= error
+  = f.input(:started_on, :wrapper_html => {:id => 'started-on-field'})
+  = f.input(:stopped_on, :wrapper_html => {:id => 'stopped-on-field'})
+  = f.input(:first_number, :wrapper_html => {:id => 'first-number-field'})
+  = f.input(:last_number, :wrapper_html => {:id => 'last-number-field'})
