--- a/app/views/backend/dashboards/tools.html.haml
+++ b/app/views/backend/dashboards/tools.html.haml
@@ -26,12 +26,13 @@
           - b.cell theme do
             %ul.desc-list
               - for item in list.sort{|a,b| a[:full_name] <=> b[:full_name] }
-                %li
-                  %h3
-                    = link_to(item[:full_name], item[:url], target: "_blank")
-                    - if item[:access] == "paid"
-                      %i.lock
-                  %p= item[:description]
+                %li.link
+                  = link_to(item[:url], target: "_blank") do
+                    %h3
+                      = item[:full_name]
+                      - if item[:access] == "paid"
+                        %i.lock
+                    %p= item[:description]
   - b.hbox do
     - b.cell :last_incidents
     - b.cell :last_document_archives
