--- a/app/views/backend/outgoing_deliveries/_form.html.haml
+++ b/app/views/backend/outgoing_deliveries/_form.html.haml
@@ -8,7 +8,7 @@
       = f.input :sent_at
 
     - b.cell do
-      = f.referenced_association :address#, :new => {:entity_id => @outgoing_delivery.sale.client_id}
+      = f.referenced_association :address, source: :mails #, :new => {:entity_id => @outgoing_delivery.sale.client_id}
 
     - b.cell do
       = f.referenced_association :sale
