--- a/app/views/backend/outgoing_deliveries/_item_fields.html.haml
+++ b/app/views/backend/outgoing_deliveries/_item_fields.html.haml
@@ -3,7 +3,8 @@
   %td
     .selector
       = f.referenced_association :source_product, :source => :deliverables
+    - if f.object.errors.any?
+      .errors= f.object.errors.inspect
   %td.decimal= f.input(:population, :size => 7, :class => "item-pta")
   %td.action
     = link_to_remove_association(content_tag(:i) + h(:destroy.tl), f, 'data-no-turbolink' => true, :class => 'remove-item')
-    = f.object.errors.inspect
