--- a/app/views/backend/transports/show.html.haml
+++ b/app/views/backend/transports/show.html.haml
@@ -1,19 +1,19 @@
-=main_toolbar do |t|
-  -t.export :transport, @transport
-  -t.edit @transport
+= main_toolbar do |t|
+  - t.export :transport, resource
+  - t.edit resource
 
-=attributes_list(@transport) do |l|
-  -l.attribute :number
-  -l.attribute :transporter, :url=>true
-  -l.attribute :reference_number
-  -l.attribute :created_on
-  -l.attribute :transport_on
-  -l.attribute :pretax_amount
-  -l.attribute :amount
-  -l.attribute :mass
-  -l.attribute :responsible, :url=>true
-  -l.attribute :description
+= attributes_list do |l|
+  - l.attribute :number
+  - l.attribute :transporter, url: true
+  - l.attribute :reference_number
+  - l.attribute :created_on
+  - l.attribute :transport_on
+  - l.attribute :pretax_amount
+  - l.attribute :amount
+  - l.attribute :net_mass
+  - l.attribute :responsible, url: true
+  - l.attribute :description
 
 
-%h2=tc :deliveries
-=list :deliveries
+%h2= tc :deliveries
+= list :deliveries
