--- a/app/views/backend/documents/show.html.haml
+++ b/app/views/backend/documents/show.html.haml
@@ -1,9 +1,9 @@
-=beehive do |b|
-  -b.tabbox do
-    -b.cell :archives do
-      =list :archives
-    -b.cell :details do
-      =attributes_list(@document) do |l|
-        -l.attribute :name
-        -l.attribute :nature
-        -l.attribute :key
+= beehive do |b|
+  - b.hbox do
+    - b.cell :details do
+      = attributes_list do |l|
+        - l.attribute :name
+        - l.attribute :nature
+        - l.attribute :key
+    - b.cell :archives do
+      = list :archives
