Massive cleaning for attributes_list

--- a/app/views/backend/accounts/show.html.haml
+++ b/app/views/backend/accounts/show.html.haml
@@ -4,7 +4,7 @@
 
 = beehive do |b|
   - b.cell do
-    = attributes_list(@account) do |l|
+    = attributes_list do |l|
       - l.attribute :number
       - l.attribute :name
       - l.attribute :reconcilable
