--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -55,7 +55,7 @@
           %span.title= Animal.human_attribute_name(:container)
           %span.value= link_to(container.name, backend_product_url(container))
     - b.cell :details do
-      = attributes_list(@animal) do |l| # liste des champs à afficher
+      = attributes_list do |l| # liste des champs à afficher
         - l.attribute :name
         - l.attribute :variety, url: true
         - l.attribute :born_at
