--- a/app/views/backend/buildings/show.html.haml
+++ b/app/views/backend/buildings/show.html.haml
@@ -3,7 +3,7 @@
 
 = beehive do |b|
   - b.cell :details do
-    = attributes_list(@building) do |l|
+    = attributes_list do |l|
       - l.attribute :name
       - l.attribute :description
 
