--- a/app/views/backend/custom_fields/show.html.haml
+++ b/app/views/backend/custom_fields/show.html.haml
@@ -6,7 +6,7 @@
 
 = beehive do |b|
   - b.cell do
-    = attributes_list(@custom_field) do |l|
+    = attributes_list do |l|
       - l.attribute :name
       - l.attribute :nature
       - l.attribute :active
