--- a/app/views/backend/interventions/show.html.haml
+++ b/app/views/backend/interventions/show.html.haml
@@ -6,7 +6,7 @@
 = beehive do |b|
   - b.tabbox do
     - b.cell do
-      = attributes_list(@intervention) do |l|
+      = attributes_list do |l|
         - l.attribute :name
         - l.attribute :started_at
         - l.attribute :stopped_at
