--- a/app/views/backend/operations/show.html.haml
+++ b/app/views/backend/operations/show.html.haml
@@ -1,7 +1,7 @@
 =main_toolbar do |t|
   -t.edit @operation
 
-=attributes_list(@operation) do |l|
+= attributes_list do |l|
   -# l.attribute :name
   -# l.attribute :nature
   -# l.attribute :responsible, :label=>:label
