--- a/app/views/backend/product_nature_categories/show.html.haml
+++ b/app/views/backend/product_nature_categories/show.html.haml
@@ -3,5 +3,5 @@
 
 = beehive do |b|
   - b.cell do
-    = attributes_list(@product_nature_category) do |l|
+    = attributes_list do |l|
       - l.attribute :name
