--- a/app/views/backend/product_variant_evolutions/show.html.haml
+++ b/app/views/backend/product_variant_evolutions/show.html.haml
@@ -3,5 +3,5 @@
 
 = beehive do |b|
   - b.cell do
-    = attributes_list(@product_variant_evolution) do |l|
+    = attributes_list do |l|
       - l.attribute :name
