--- a/app/views/backend/production_supports/show.html.haml
+++ b/app/views/backend/production_supports/show.html.haml
@@ -3,13 +3,13 @@
 
 =beehive do |b|
   -b.cell do
-    =attributes_list(@production_support) do |l|
-      -l.attribute :name
-      -l.attribute :storage, url: true
-      -l.attribute :production, url: true
-      -l.attribute :started_at
-      -l.attribute :stopped_at
-      -l.attribute :irrigated
+    = attributes_list do |l|
+      - l.attribute :name
+      - l.attribute :storage, url: true
+      - l.attribute :production, url: true
+      - l.attribute :started_at
+      - l.attribute :stopped_at
+      - l.attribute :irrigated
 
   - b.tabbox do
     - b.cell(:interventions) do
