--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -3,7 +3,7 @@
 
 = beehive do |b|
   - b.cell do
-    = attributes_list(@production) do |l|
+    = attributes_list do |l|
       - l.attribute :name
       - l.attribute :variant
       - l.attribute :started_at
