--- a/app/views/backend/animal_groups/show.html.haml
+++ b/app/views/backend/animal_groups/show.html.haml
@@ -4,8 +4,8 @@
 
 =beehive do |b|
   -b.cell do
-    =attributes_list(@animal_group) do |l|
-      -l.attribute :name
+    = attributes_list do |l|
+      - l.attribute :name
   -b.tabbox do
     -b.cell(:animals) do
       =list(:animals)
