--- a/app/views/backend/campaigns/show.html.haml
+++ b/app/views/backend/campaigns/show.html.haml
@@ -3,12 +3,12 @@
 
 =beehive do |b|
   -b.cell do
-    =attributes_list(@campaign) do |l|
-      -l.attribute :name
-      -l.attribute :harvest_year
-      -l.attribute :closed
-      -l.attribute :number
-      -l.attribute :description
+    = attributes_list do |l|
+      - l.attribute :name
+      - l.attribute :harvest_year
+      - l.attribute :closed
+      - l.attribute :number
+      - l.attribute :description
 
   - b.tabbox do
     - b.cell(:productions) do
