--- a/app/views/backend/incidents/show.html.haml
+++ b/app/views/backend/incidents/show.html.haml
@@ -3,7 +3,7 @@
 
 = beehive do |b|
   - b.cell do
-    = attributes_list(@incident) do |l|
+    = attributes_list do |l|
       - l.attribute :name
       - l.attribute :target, url: true
 
