--- a/app/views/backend/incoming_payments/show.html.haml
+++ b/app/views/backend/incoming_payments/show.html.haml
@@ -3,23 +3,23 @@
 
 =beehive do |b|
   -b.cell do
-    =attributes_list(@incoming_payment) do |l|
-      -l.attribute :number
-      -l.attribute :amount, currency: true
-      -l.attribute :payer, :label=>:full_name, url: true
-      -l.attribute :responsible, :label=>:label
-      -l.attribute :deposit, url: true
-      -l.attribute :mode
-      -l.attribute :commission_amount
-      -l.attribute :commission_account, url: true
-      -l.attribute :paid_on
-      -l.attribute :to_bank_on
-      -l.attribute :received
-      -l.attribute :scheduled
-      -l.attribute :bank_name
-      -l.attribute :bank_account_number
-      -l.attribute :bank_check_number
-      -l.attribute :journal_entry, url: true
+    = attributes_list do |l|
+      - l.attribute :number
+      - l.attribute :amount, currency: true
+      - l.attribute :payer, :label=>:full_name, url: true
+      - l.attribute :responsible, :label=>:label
+      - l.attribute :deposit, url: true
+      - l.attribute :mode
+      - l.attribute :commission_amount
+      - l.attribute :commission_account, url: true
+      - l.attribute :paid_on
+      - l.attribute :to_bank_on
+      - l.attribute :received
+      - l.attribute :scheduled
+      - l.attribute :bank_name
+      - l.attribute :bank_account_number
+      - l.attribute :bank_check_number
+      - l.attribute :journal_entry, url: true
 
   -b.cell tc(:affair) do
     =affair_of(@incoming_payment)
