--- a/app/views/backend/journal_entries/show.html.haml
+++ b/app/views/backend/journal_entries/show.html.haml
@@ -6,7 +6,7 @@
 = beehive do |b|
 
   - b.cell do
-    = attributes_list(@journal_entry) do |l|
+    = attributes_list do |l|
       - l.attribute :number
       - l.attribute :printed_on
       - l.attribute :created_on
