--- a/app/views/backend/outgoing_payments/show.html.haml
+++ b/app/views/backend/outgoing_payments/show.html.haml
@@ -3,16 +3,16 @@
 
 =beehive do |b|
   -b.cell do
-    =attributes_list(@outgoing_payment) do |l|
-      -l.attribute :number
-      -l.attribute :amount
-      -l.attribute :payee, :label=>:full_name, url: true
-      -l.attribute :responsible, :label=>:label
-      -l.attribute :mode
-      -l.attribute :paid_on
-      -l.attribute :to_bank_on
-      -l.attribute :bank_check_number
-      -l.attribute :journal_entry, url: true
+    = attributes_list do |l|
+      - l.attribute :number
+      - l.attribute :amount
+      - l.attribute :payee, :label=>:full_name, url: true
+      - l.attribute :responsible, :label=>:label
+      - l.attribute :mode
+      - l.attribute :paid_on
+      - l.attribute :to_bank_on
+      - l.attribute :bank_check_number
+      - l.attribute :journal_entry, url: true
 
   -b.cell tc(:affair) do
     =affair_of(@outgoing_payment)
