--- a/app/views/backend/product_natures/show.html.haml
+++ b/app/views/backend/product_natures/show.html.haml
@@ -3,13 +3,13 @@
 
 =beehive do |b|
   -b.cell :details do
-    =attributes_list(@product_nature) do |l|
-      -l.attribute :name
-      -l.attribute :number
-      -l.attribute :active
+    = attributes_list do |l|
+      - l.attribute :name
+      - l.attribute :number
+      - l.attribute :active
       -# l.attribute :catalog_name
       -# l.attribute :catalog_description
-      -l.attribute :description
+      - l.attribute :description
       -# l.attribute :description
       -# l.attribute :stockable
 
