--- a/app/views/backend/production_support_markers/show.html.haml
+++ b/app/views/backend/production_support_markers/show.html.haml
@@ -3,5 +3,5 @@
 
 =beehive do |b|
   -b.cell do
-    =attributes_list(@production_support_marker) do |l|
-      -l.attribute :indicator_name
+    = attributes_list do |l|
+      - l.attribute :indicator_name
