--- a/app/views/backend/products/show.html.haml
+++ b/app/views/backend/products/show.html.haml
@@ -5,7 +5,7 @@
 = beehive do |b|
   - b.cell :details do
 
-    = attributes_list(@product) do |l| # liste des champs à afficher
+    = attributes_list do |l| # liste des champs à afficher
       - l.attribute :name
       - l.attribute :variety, url: true
       - l.attribute :identification_number
