--- a/app/views/backend/sale_natures/show.html.haml
+++ b/app/views/backend/sale_natures/show.html.haml
@@ -1,15 +1,15 @@
 =main_toolbar do |t|
   -t.edit @sale_nature
-=attributes_list(@sale_nature) do |l|
-  -l.attribute :name
-  -l.attribute :active
-  -l.attribute :currency
-  -l.attribute :expiration_delay
-  -l.attribute :payment_delay
-  -l.attribute :downpayment
+= attributes_list do |l|
+  - l.attribute :name
+  - l.attribute :active
+  - l.attribute :currency
+  - l.attribute :expiration_delay
+  - l.attribute :payment_delay
+  - l.attribute :downpayment
   -if @sale_nature.downpayment?
-    -l.attribute :downpayment_minimum
-    -l.attribute :downpayment_percentage
-  -l.attribute :with_accounting
+    - l.attribute :downpayment_minimum
+    - l.attribute :downpayment_percentage
+  - l.attribute :with_accounting
   -if @sale_nature.with_accounting?
-    -l.attribute :journal
+    - l.attribute :journal
