--- a/app/views/backend/settlements/show.html.haml
+++ b/app/views/backend/settlements/show.html.haml
@@ -3,5 +3,5 @@
 
 =beehive do |b|
   -b.cell do
-    =attributes_list(@settlement) do |l|
-      -l.attribute :name
+    = attributes_list do |l|
+      - l.attribute :name
