--- a/app/views/backend/productions/_marker_fields.html.haml
+++ b/app/views/backend/productions/_marker_fields.html.haml
@@ -4,5 +4,7 @@
   = f.input(:indicator_datatype, :wrapper_html => {:id => 'indicator_datatype-field'})
   = f.input(:value, :wrapper_html => {:id => 'measure_value-field'})
   =f.input(:aim, :wrapper_html => {:id => 'aim-field'})
+  =f.input(:subject, :wrapper_html => {:id => 'subject-field'})
+  =f.input(:derivative, :wrapper_html => {:id => 'derivative-field'})
   =f.input(:started_at, :wrapper_html => {:id => 'started_at-field'})
   =f.input(:stopped_at, :wrapper_html => {:id => 'stopped_at-field'})
